2006-07-06  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.am (stamp-sh2): Update sed commands used to create
	stdint.h based on lib/Makefile.am.
	* config.h.in.in: Merge changes from ../config.h.in
	* Makefile.in, config.h, config.h.in, stdint.h: Regenerated
	
2006-07-06  Derek Price  <derek@ximbiot.com>

	* filesubr.c (last_component): Remove, in favor of GNULIB version from
	lib/basename.c.

2006-06-28  Derek Price  <derek@ximbiot.com>

	* config.h.in.in [HAVE_UTIME_NULL]: Remove to sync with configure.in.

2006-06-27  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h: Regenerated.

2006-06-26  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.am: Update from gnulib.
	* Makefile.in, stdint.h: Regenerated.

2006-06-26  Derek Price  <derek@ximbiot.com>

	* config.h.in.in [POPEN_BINARY_FLAG]: Define this.

2006-06-24  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h: Regenerated.

2006-06-23  Larry Jones  <lawrence.jones@ugs.com>

	* stdint.h: Regenerated.

2006-06-23  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h: Regenerated.

2006-06-22  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in (HAVE_GETHOSTBYNAME): Add #undef to match
	../config.h.in this should be defined if gethostbyname() exists on
	windows.
	* config.h, config.h.in, stamp-chi, stdint.h: Regenerated.

2006-06-22  Jim Hyslop <jhyslop@dreampossible.ca>

	* strtoimax.c, strtoumax.c: new files to implement the strtoimax
	and strtoumax functions. Based on ggc's strto(u)l functions.

2006-06-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.am: Update for stdint.h generation.
	* config.h.in.in: Manual hacks to attempt to add missing
	definitions for stdint.h generation.
	* Makefile.in, config.h, config.h.in, stamp-chi, stdint.h:
	Regenerated.
	
2006-06-14  Jim Hyslop <jhyslop@dreampossible.ca>

	* canonicalize.c: new file, with Windows-specific implementation
	of function canonicalize_filename_mode()

2006-06-12  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Undo trailing space addition from previous change