@@ -331,6 +331,10 @@
    don't. */
 #undef HAVE_DECL_PUTC_UNLOCKED
 
+/* Define to 1 if you have the declaration of `snprintf', and to 0 if you
+   don't. */
+#undef HAVE_DECL_SNPRINTF
+
 /* Define to 1 if you have the declaration of `strdup', and to 0 if you don't.
    */
 #define HAVE_DECL_STRDUP 1
@@ -369,7 +373,7 @@
 
 /* Define to 1 if you have the declaration of `wcwidth', and to 0 if you
    don't. */
-#undef HAVE_DECL_WCWIDTH
+#define HAVE_DECL_WCWIDTH 0
 
 /* Define to 1 if you have the declaration of `__fpending', and to 0 if you
    don't. */
@@ -512,9 +516,6 @@
 
 /* Define to 1 if <sys/socket.h> defines AF_INET6. */
 #undef HAVE_IPV6
-
-/* Define to 1 if you have the `isascii' function. */
-#define HAVE_ISASCII 1
 
 /* Define to 1 if you have the `isblank' function. */
 #undef HAVE_ISBLANK
@@ -981,7 +982,7 @@
 #define HAVE_WCTYPE_H 1
 
 /* Define to 1 if you have the `wcwidth' function. */
-#undef HAVE_WCWIDTH
+#define HAVE_WCWIDTH 0
 
 /* Define to 1 if you have the <winsock2.h> header file. */
 #define HAVE_WINSOCK2_H 1
